--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,1 +1,27 @@
-/node_modules
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.yarn/cache
+
+# Runtime data
+node_modules
+dist
+dist-ssr
+*.local
+
+# Local Database
+db.json
+
+# Editor directories and files
+.idea
+.vscode/*
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.env
