--- a/api/package.json
+++ b/api/package.json
@@ -1,20 +1,38 @@
 {
-  "name": "api-app-sample",
+  "name": "standalone-app-backend-node",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "license": "MIT",
   "scripts": {
-    "start:dev": "nodemon ./index.js",
-    "start": "node ./index.js",
-    "start:db": "json-server --watch ./api/db.json --port 3201"
+    "dev": "nodemon --watch 'src/**/*.ts' --watch './.env'",
+    "database": "json-server --port 5000 --watch db.json"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "cors": "2.8.5",
-    "express": "4.18.2",
-    "passport": "0.6.0",
-    "passport-jwt": "4.0.0"
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.18.2",
+    "json-server": "^0.17.3",
+    "morgan": "^1.10.0",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@faker-js/faker": "^8.0.2",
+    "@types/axios": "^0.14.0",
+    "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.17",
+    "@types/json-server": "^0.14.4",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.2.5",
+    "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.9",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.3"
   }
 }
