chore: update submodule frontend

--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "standalone-app-backend-node",
+  "name": "native-app-backend-node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
