--- a/.gitignore
+++ b/.gitignore
@@ -122,7 +122,7 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
-.yarn/
+# .yarn/
 .yarn/*
 !.yarn/releases
 !.yarn/patches
