chore: general adjusts

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,4 +1,4 @@
-# PORT
+# Port where the backend will run
 PORT=8000
 
 # for latam https://www.tiendanube.com/apps/authorize/token
@@ -10,7 +10,6 @@ TIENDANUBE_AUTENTICATION_URL=https://www.tiendanube.com/apps/authorize/token
 TIENDANUBE_API_URL=https://api.nuvemshop.com.br/v1
 
 # App settings
-
 # You client secret for app
 CLIENT_SECRET=
 
