--- a/api/.env.example
+++ b/api/.env.example
@@ -19,5 +19,6 @@ CLIENT_ID=
 # Your Partners Portal account email
 CLIENT_EMAIL=
 
-# Your secret
+# In Developer Mode the value must be THE_SECRET
+# In Production environment the value must be the client_secret of your app
 SECRET_KEY=THE_SECRET
